# FASText

./: .gitignore  CMakeLists.txt  FastTextConfig.cmake.in  README.md  cvBoostChar.xml
src/: CMakeLists.txt  CharClassifier.cpp  CharClassifier.h  FASTex.cpp  FASTex.hpp  FTPyramid.cpp  FTPyramid.hpp  FT_common.cpp  FT_common.hpp  FastTextLine.cpp  FastTextLine.h  FastTextLineDetector.cpp  FastTextLineDetector.h  HoughTLDetector.cpp  HoughTLDetector.h  IOUtils.cpp  IOUtils.h  KeyPoints.cpp  KeyPoints.h  Segmenter.cpp  Segmenter.h  TimeUtils.cpp  TimeUtils.h  detectors.cpp  detectors.h  geometry.cpp  geometry.h  process_dir.cpp
src/Python/: CMakeLists.txt  pyFastTextAPIG.c  pyFastTextG.cpp  pyFastTextG.h
src/segm/: flood_fill.cpp  flood_fill.h  segmentation.cpp  segmentation.h
src/vis/: componentsVis.cpp  componentsVis.h
tools/: .gitignore  evaluateSegmentation.py  ft.py  icdarUtils.py  segmentation.py  testLines.py  trainCharFeatures.py  utils.py  utls.py  vis.py
